--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,26 @@
     <artifactId>jna</artifactId>
     <version>5.10.0</version> <!-- Make sure to use a compatible version -->
 </dependency>
+<dependency>
 
+    <groupId>org.apache.logging.log4j</groupId>
+
+    <artifactId>log4j-api</artifactId>
+
+    <version>2.17.2</version>
+
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+
+ <dependency>
+
+        <groupId>org.apache.logging.log4j</groupId>
+
+        <artifactId>log4j-core</artifactId>
+
+        <version>2.17.2</version>
+
+ </dependency>
   </dependencies>
 </project>
