--- a/src/test/resources/configs/config.properties
+++ b/src/test/resources/configs/config.properties
@@ -3,4 +3,6 @@ username = passionate_coders
 password = pa$$word123
 browser = chrome
 implicitlyWait=10
+stackPageExcelPath=src/test/resources/ExcelData/StackPageLinks.xls
+queuePageExcelPath=src/test/resources/ExcelData/QueuePageLinks.xls
 
