--- a/src/test/resources/configs/config.properties
+++ b/src/test/resources/configs/config.properties
@@ -1,11 +1,9 @@
 url = https://dsportalapp.herokuapp.com/
+homepage=https://dsportalapp.herokuapp.com/home
+loginpage=https://dsportalapp.herokuapp.com/login
 username = passionate_coders
 password = pa$$word123
 browser = chrome
 implicitlyWait=10
 stackPageExcelPath=src/test/resources/ExcelData/StackPageLinks.xls
 queuePageExcelPath=src/test/resources/ExcelData/QueuePageLinks.xls
-<<<<<<< HEAD
-=======
-
->>>>>>> suguna
