--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,16 @@
         <target>1.8</target>
       </configuration>
     </plugin>
+    <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.2</version>
+                <configuration>
+					<suiteXmlFiles>
+                    <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>  <!-- Path to your testng.xml -->
+					</suiteXmlFiles>
+                </configuration>
+            </plugin>
   </plugins>
 </build>
   <dependencies>
