--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+ <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>SDET_BDD</groupId>
   <artifactId>SDET_BDD</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <!-- Properties section -->
+    <properties>
+        <dataprovider.threadCount>4</dataprovider.threadCount> <!-- Set your desired thread count here -->
+    </properties>
+
   <!-- Build plugin to force Maven JDK 1.8 compliance -->
 <build>
   <plugins>
@@ -13,6 +19,7 @@
       <configuration>
         <source>1.8</source>
         <target>1.8</target>
+        
       </configuration>
     </plugin>
     <plugin>
@@ -28,7 +35,7 @@
   </plugins>
 </build>
   <dependencies>
-	  <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+ <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
 <dependency>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-surefire-plugin</artifactId>
@@ -36,7 +43,7 @@
     
 </dependency>
 
-	  <dependency>
+	<dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
     <version>4.27.0</version>
