--- a/src/test/resources/configs/config.properties
+++ b/src/test/resources/configs/config.properties
@@ -7,3 +7,6 @@ browser = chrome
 implicitlyWait=10
 stackPageExcelPath=src/test/resources/ExcelData/StackPageLinks.xls
 queuePageExcelPath=src/test/resources/ExcelData/QueuePageLinks.xls
+graphPageExcelPath=src/test/resources/ExcelData/GraphPageLinks.xls
+treePageExcelPath=src/test/resources/ExcelData/TreePageLinks.xls
+
