--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
     <version>3.5.2</version>
     
 </dependency>
+	<!-- https://mvnrepository.com/artifact/tech.grasshopper/extentreports-cucumber7-adapter -->
+<dependency>
+    <groupId>tech.grasshopper</groupId>
+    <artifactId>extentreports-cucumber7-adapter</artifactId>
+    <version>1.14.0</version>
+</dependency>
 
 	<dependency>
     <groupId>org.seleniumhq.selenium</groupId>
