--- a/src/test/resources/configs/config.properties
+++ b/src/test/resources/configs/config.properties
@@ -9,5 +9,5 @@ stackPageExcelPath=src/test/resources/ExcelData/StackPageLinks.xls
 queuePageExcelPath=src/test/resources/ExcelData/QueuePageLinks.xls
 graphPageExcelPath=src/test/resources/ExcelData/GraphPageLinks.xls
 treePageExcelPath=src/test/resources/ExcelData/TreePageLinks.xls
-DataStructuresExcelPath=src/test/resources/ExcelData/DataStructuresintro.xlsx
+DataStructuresExcelPath=src/test/resources/ExcelData/DataStructuresintroduction.xls
 
