Added ScreenshotUtil.java file

--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,2 +1,4 @@
 extent.reporter.spark.start=true
 extent.reporter.spark.out=test-output/ExtentReport/Spark.html
+screenshot.dir=target/screenshots
+screenshot.rel.path=../
