--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,13 @@
     <artifactId>allure-maven</artifactId>
     <version>2.8</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.9.2</version>
+</dependency>
+
 
 
   </dependencies>
